--- a/cart-service/src/main/resources/application.yml
+++ b/cart-service/src/main/resources/application.yml
@@ -12,3 +12,6 @@ eureka:
 instance:
   lease-renewal-interval-in-seconds: 30
   lease-expiration-duration-in-seconds: 90
+feign:
+  hystrix:
+    enabled: true
